@@ -72,6 +72,7 @@ production.
   used
 * (bug 28649) Avoiding half truncated multi-byte unicode characters when 
   truncating log comments.
+* Show --batch-size option in help of maintenance scripts that support it
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
